resources/istio/private_gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: private-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8888 
      name: http
      protocol: HTTP
    hosts:
    - private.mymco.local
