resources/istio/private_virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: private-simple
spec:
  hosts:
    - 'private.mymco.local'
  gateways:
    - private-gateway
  http:
  - match:
    - uri:
        prefix: /_command/
    route:
    - destination:
        host: simple
        port:
          number: 8000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-simple
spec:
  hosts:
    - 'public.mymco.local'
  gateways:
    - private-gateway
  http:
  - match:
    - uri:
        prefix: "/_command/status"
    route:
    - destination:
        host: simple
        port:
          number: 8888
  - match:
    - uri:
        prefix: /_command/
    route:
    - destination:
        host: simple
        port:
          number: 8000
