resources/istio/public_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: public-simple
spec:
  hosts:
  - "*.mymco.local"
  gateways:
  - public-gateway
  http:
  - match:
    - sniHosts:
      - "*.mymco.local"
    route:
    - destination:
        host: simple
        port:
          number: 8000
